--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ng-schedule",
   "version": "0.1.0",
   "description": "Schedule picker for Angular 1",
-  "main": "index.js",
   "scripts": {
     "start": "concurrently \"gulp watch\" \"http-server ./ -c -1\"",
     "build": "gulp",
@@ -10,7 +9,7 @@
     "postinstall": "bower install && typings install"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "concurrently": "~2.2.0",
     "http-server": "~0.9.0",
