--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "concurrently \"gulp watch\" \"http-server ./ -c -1\"",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "bower install && typings install"
+    "prepublish": "concurrently \"bower install\" \"typings install\"",
+    "version": "gulp --release && bower version"
   },
   "author": "",
   "license": "MIT",
@@ -15,6 +16,8 @@
     "http-server": "~0.9.0",
     "merge2": "~1.0.2",
     "gulp": "~3.9.1",
+    "gulp-if": "~2.0.1",
+    "gulp-util": "~3.0.7",
     "gulp-concat": "~2.6.0",
     "gulp-replace": "~0.5.4",
     "gulp-typescript": "~2.14.0",
