--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "concurrently": "~2.2.0",
     "http-server": "~0.9.0",
     "merge2": "~1.0.2",
+    "typescript": "~2.0.0",
     "gulp": "~3.9.1",
     "gulp-if": "~2.0.1",
     "gulp-util": "~3.0.7",
