--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "src"
   ],
   "dependencies": {
     "angular": "latest"
