--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.2.0",
   "name": "ng-schedule",
   "authors": [
     "Vinicius Salvati Melquiades <vinicius.melquiades@outlook.com>"
