--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
 	"typescript.tsdk": "node_modules/typescript/lib",
-	"editor.renderWhitespace": true,
+	"editor.renderWhitespace": "boundary",
 	"editor.insertSpaces": false
 }
